package dmRender;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

option java_package = "com.dynamo.render.proto";
option java_outer_classname = "Material";
option (ddf_java_package) = "com.dynamo.render.ddf";

message MaterialDesc
{
    message Parameter
    {
        required uint32 Register = 1;
        required dmMath.Vector4 Value = 2;
    }

    required string Name = 1;
    repeated string Tags = 2;
    required string VertexProgram = 3;
    required string FragmentProgram = 4;
    repeated Parameter VertexParameters = 5;
    repeated Parameter FragmentParameters = 6;
}

